src/main/java/com/example/cto/error/exceptions/AccessDeniedException.java
package com.example.cto.error.exceptions;

public class AccessDeniedException extends RuntimeException{
    public AccessDeniedException(String message) {
        super(message);
    }
}
